2000-02-08  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Configuration Commands): New section, for
	AC_CONFIG_COMMANDS.
	Move the definition of AC_OUTPUT_COMMANDS here.
	(Configuration Links): New section, for AC_CONFIG_LINKS and
	AC_LINK_FILES.
	(Configuration Files): New section, for AC_CONFIG_FILES.
	(Globally) Promote AC_CONFIG_HEADERS over AC_CONFIG_HEADER.
	(Using System Type): Don't document AC_CONFIG_LINKS and
	AC_LINK_FILES.
	(Invoking config.status): Mention CONFIG_COMMANDS.
	Document --file and --header.
	Talk first of the newest interface of config.status.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Introduce a concept index, and update a bit the documentation.

	* doc/autoconf.texi (Concept Index): New section.
	Various entries added.
	(Typedefs): Renamed as...
	(Types): this.  Pay attention to not limiting the documentation to
	the typedefs.
	(Particular Types): Mention the equivalent generic test.
	Promote the GNU coding style at various places.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Revamp the autoupdate/AC_OBSOLETE chain.  All the details are
	given in the prologue of acobsolete.m4.

	* acgeneral.m4 (Prologue): Enter the `autoconf' name space.
	(AU_DEFUN): New macro.

	* autoupdate.m4: New file.
	Disable the name spaces `autoconf', and `libm4'.  Disable libm4.
	* Makefile.am: Tuned to support the changes above.

	* autoupdate.sh: Model after autoconf.sh.
	Can run on several files at once (for instance m4/*.m4).
	Don't touch files that are up to date.
	Run m4 on autoupdate.m4f instead of playing with sed.


	Use AU_DEFUN.

	* acgeneral.m4 (AC_LINK_FILES, AC_ENABLE, AC_WITH): Use AU_DEFUN,
	remove the call to AC_OBSOLETE.
	* acspecific.m4 (AC_CYGWIN32): Likewise.
	* acoldnames.m4: Replaced all the definitions via `define' or
	`AC_DEFUN' to use `AU_DEFUN'.

2000-02-08  Akim Demaille  <akim@epita.fr>

	Clean up some m4 files.

	* acoldnames.m4: Use `#', not `dnl'.
	Don't spread `dnl' everywhere, anyway, we are in a divert(-1).